# battleship

./: .gitmodules  CMakeLists.txt  README.md  run.sh
include/: assets.hpp  board_generator.hpp  ship_generator.hpp
include/ui/: UI.hpp
include/ui/pages/: MainPage.hpp  Page.hpp
include/ui/widgets/: Grid.hpp  Label.hpp  Widget.hpp
src/: assets.cpp  board_generator.cpp  main.cpp  ship_generator.cpp
src/ui/: UI.cpp
src/ui/pages/: MainPage.cpp
src/ui/widgets/: Grid.cpp  Label.cpp  Widget.cpp
